1. 打包完善