@@ -164,6 +164,7 @@ public class PkgUtil {
      * @param config jlink配置
      * @return jlink命令
      */
+    @Deprecated
     public static String getJLinkCMD(JLinkConfig config) {
         String cmdStr = "jlink";
         if (config.isVerbose()) {
@@ -200,6 +201,47 @@ public class PkgUtil {
     }
 
     /**
+     * 获取jlink命令
+     *
+     * @param config jlink配置
+     * @return jlink命令
+     */
+    public static String[] getJLinkCMD1(JLinkConfig config) {
+        List<String> cmdList = new ArrayList<>();
+        cmdList.add("jlink");
+        if (config.isVerbose()) {
+            cmdList.add("--verbose");
+        }
+        if (config.getVm() != null) {
+            cmdList.add("--vm=" + config.getVm());
+        }
+        if (config.getCompress() != null) {
+            cmdList.add("--compress=" + config.getCompress());
+        }
+        if (config.isNoHeaderFiles()) {
+            cmdList.add("--no-header-files");
+        }
+        if (config.isNoManPages()) {
+            cmdList.add("--no-man-pages");
+        }
+        if (config.isStripDebug()) {
+            cmdList.add("--strip-debug");
+        }
+        if (config.isStripJavaDebugAttributes()) {
+            cmdList.add("--strip-java-debug-attributes");
+        }
+        if (CollectionUtil.isNotEmpty(config.getAddModules())) {
+            cmdList.add("--add-modules");
+            cmdList.add(CollectionUtil.join(config.getAddModules(), ","));
+        }
+        if (CollectionUtil.isNotEmpty(config.getExcludeFiles())) {
+            cmdList.add("--exclude-files=" + CollectionUtil.join(config.getExcludeFiles(), ","));
+        }
+        cmdList.add("--output=" + config.getOutput());
+        return ArrayUtil.toArray(cmdList, String.class);
+    }
+
+    /**
      * 获取jdeps命令
      *
      * @param config jdeps配置
@@ -218,6 +260,28 @@ public class PkgUtil {
         }
         return cmdStr;
     }
+
+    // /**
+    //  * 获取jdeps命令
+    //  *
+    //  * @param config jdeps配置
+    //  * @return jdeps命令
+    //  */
+    // public static String[] getJDepsCMD1(JDepsConfig config) {
+    //     List<String> cmdList = new ArrayList<>();
+    //     cmdList.add("jdeps");
+    //     if (config.isVerbose()) {
+    //         cmdList.add("-verbose");
+    //     }
+    //     if (config.isSummary()) {
+    //         cmdList.add("-summary");
+    //     }
+    //     if (config.getMultiRelease() != null) {
+    //         cmdList.add("--multi-release");
+    //         cmdList.add(config.getMultiRelease() + "");
+    //     }
+    //     return ArrayUtil.toArray(cmdList, String.class);
+    // }
 
     /**
      * 获取jpackage命令
@@ -313,7 +377,7 @@ public class PkgUtil {
         }
         if (config.getDescription() != null) {
             cmdList.add("--description");
-            cmdList.add( config.getDescription() );
+            cmdList.add(config.getDescription());
         }
         if (config.getIcon() != null) {
             cmdList.add("--icon");
@@ -388,7 +452,9 @@ public class PkgUtil {
      * @return 执行命令
      */
     public static String[] getJDKExecCMD(String jdkPath, String[] cmd) {
-        cmd[0] = getJDKExecCMD(jdkPath, cmd[0]);
+        if (jdkPath != null) {
+            cmd[0] = FileNameUtil.concat(jdkPath, "bin", cmd[0]);
+        }
         return cmd;
     }
 }
